[package]
name = "taskmaster"
version = "0.1.0"
authors = ["pscott <scottpiriou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redox_liner = "0.5.1"
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.57"
serde_yaml = "0.8.17"
dirs = "3.0.1"
